--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -55,30 +55,38 @@ jobs:
         echo "Created comments.json"
 
         while IFS= read -r line; do
-          echo "Processing line: $line"
-          
-          if [[ "$line" =~ ^@@ ]]; then
-            echo "Line matches diff hunk header"
+            echo "Processing line: $line"
             
-            file=$(echo "$line" | sed -n 's|^--- a/\(.*\)|\1|p')
-            echo "Got file name: $file"
-            
-            position=$(echo "$line" | grep -oP '(?<=@@ -).*?(?= @@)' | awk '{split($0, a, " "); print a[2]}')
-            echo "Got line number: $position"
-            
-            comment=$(jq -n --arg file "$file" --arg pos "$position" '{path: $file, position: ($pos|tonumber), body: "Please apply the suggested clang-format changes."}')
-            echo "Generated comment: $comment"
-            
-            tmp=$(mktemp)
-            jq ". += [$comment]" comments.json > "$tmp" && mv "$tmp" comments.json
-            echo "Appended comment to comments.json"
-          fi
+            if [[ "$line" =~ ^diff ]]; then
+                echo "Processing diff header line: $line"
+
+                # Extract file names from the diff header
+                changed_file=$(echo "$line" | awk '{print $3}' | sed 's/^a\///')
+                echo "File: $changed_file"
+            elif [[ "$line" =~ ^@@ ]]; then
+                echo "Line matches diff hunk header"
+
+                position=$(echo "$line" | grep -oP '(?<=@@ -).*?(?= @@)' | awk '{split($0, a, " "); print a[2]}')
+                echo "Got line number: $position"
+
+                # Construct JSON manually
+                comment="{\"path\":\"$changed_file\",\"position\":$position,\"body\":\"Please apply the suggested clang-format changes.\"}"
+                echo "Generated comment: $comment"
+
+                # Read existing comments.json and append new comment
+                existing_comments=$(cat comments.json)
+                new_comments=$(echo "$existing_comments" | sed -e 's/]//')
+                new_comments+="$comment,]"
+                echo "$new_comments" > comments.json
+                echo "Appended comment to comments.json"
+            fi
+
         done < clang_format.patch
 
     - name: Suggest changes via GitHub API
       if: failure()
       run: |
-        echo "Attempting to post review comments via GitHub API..."
+        echo "Post review comments via GitHub API"
         PR_NUMBER="${{ github.event.pull_request.number }}"
         COMMIT_ID=$(git rev-parse HEAD)
         REVIEW_BODY="Please make the changes suggested by clang-format"
