--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -96,4 +96,9 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN_CLANG }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews \
-          -d "$(jq -n --arg commit_id "$COMMIT_ID" --arg body "$REVIEW_BODY" --argjson comments "$COMMENTS" '{commit_id: $commit_id, body: $body, event: "REQUEST_CHANGES", comments: $comments}')"
+          -d '{
+            "commit_id": "'$COMMIT_ID'",
+            "body": "Please make the changes suggested by clang-format",
+            "event": "REQUEST_CHANGES",
+            "comments": '$COMMENTS'
+          }'
