--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -70,7 +70,7 @@ jobs:
                 echo "Got line number: $position"
 
                 # Construct JSON manually
-                comment="{\"path\":\"$changed_file\",\"position\":$position,\"body\":Please apply the suggested clang-format changes.}"
+                comment="{\"path\":\"$changed_file\",\"position\":$position,\"body\":\"Please apply the suggested clang-format changes.\"}"
                 echo "Generated comment: $comment"
                 comments+=("$comment")
             fi
@@ -97,7 +97,7 @@ jobs:
           https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews \
           -d '{
             "commit_id": "'$COMMIT_ID'",
-            "body": "Please make the changes suggested by clang-format",
+            "body": "Changes suggested by clang-format",
             "event": "REQUEST_CHANGES",
             "comments": '$COMMENTS'
           }'
