--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -49,55 +49,33 @@ jobs:
         git diff -U0
         git diff -U0 > clang_format.patch
 
-    - name: Generate suggestions
+    - name: Check if patch is not empty
+      id: check_patch
       run: |
-        echo "[]" > comments.json
-        echo "Created comments.json"
+        if [ -s clang_format.patch ]; then
+          echo "Patch is not empty"
+          echo "::set-output name=patch_not_empty::true"
+        else
+          echo "Patch is empty"
+          echo "::set-output name=patch_not_empty::false"
+        fi
 
-        while IFS= read -r line; do
-            echo "Processing line: $line"
-            
-            if [[ "$line" =~ ^diff ]]; then
-                echo "diff header line"
+    - name: Post patch as comment
+      if: steps.check_patch.outputs.patch_not_empty == 'true'
+      uses: actions/github-script@v4
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN_CLANG }}
+        script: |
+          const fs = require('fs');
+          const { context, GitHub } = require('@actions/github');
 
-                changed_file=$(echo "$line" | awk '{print $3}' | sed 's/^a\///')
-                echo "File: $changed_file"
+          const patchFile = 'clang_format.patch';
+          const patchContent = fs.readFileSync(patchFile, 'utf8');
 
-            elif [[ "$line" =~ ^@@ ]]; then
-                echo "diff hunk header"
-
-                position=$(echo "$line" | grep -oP '(?<=@@ -).*?(?= @@)' | awk '{split($0, a, " "); print a[2]}')
-                echo "Got line number: $position"
-
-                # Construct JSON manually
-                comment="{\"path\":\"$changed_file\",\"position\":$position,\"body\":\"Please apply the suggested clang-format changes.\"}"
-                echo "Generated comment: $comment"
-                comments+=("$comment")
-            fi
-
-        done < clang_format.patch
-
-        comments_json=$(printf ",%s" "${comments[@]}")
-        comments_json="[${comments_json:1}]"
-        echo "$comments_json" > comments.json
-        echo "Final comments.json: $comments_json"
-
-    - name: Suggest changes via GitHub API
-      run: |
-        echo "Post review comments via GitHub API"
-        PR_NUMBER="${{ github.event.pull_request.number }}"
-        COMMIT_ID=$(git rev-parse HEAD)
-        REVIEW_BODY="Please make the changes suggested by clang-format"
-        COMMENTS=$(cat comments.json)
-        curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN_CLANG }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews \
-          -d '{
-            "commit_id": "'$COMMIT_ID'",
-            "body": "Changes suggested by clang-format",
-            "event": "REQUEST_CHANGES",
-            "comments": '$COMMENTS'
-          }'
+          const octokit = new GitHub(process.env.GITHUB_TOKEN_CLANG);
+          octokit.rest.issues.createComment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+            body: 'Here is the clang-format patch:\n```diff\n' + patchContent + '\n```'
+          });
