--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -67,7 +67,8 @@ jobs:
         COMMENT_BODY=$(printf "Here is the clang-format patch:\n\`\`\`diff\n%s\n\`\`\`" "$PATCH_CONTENT")
         API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
         curl -X POST \
+          -H "Accept: application/vnd.github+json" \
           -H "Authorization: token ${{ secrets.GH_ACTION_TOKEN_CLANG_FORMAT }}" \
-          -H "Content-Type: application/json" \
-          -d "{\"body\":\"$COMMENT_BODY\"}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          -d "{\"body\":\"$COMMENT_BODY\",\"commit_id\":\"${{ github.event.pull_request.head.sha }}\"}"
           $API_URL
