--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -70,4 +70,5 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: token ${{ secrets.GH_ACTION_TOKEN_CLANG_FORMAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
+          $API_URL \
           -d "{\"body\": \"${COMMENT_BODY}\"}"
