--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -64,7 +64,7 @@ jobs:
       if: steps.check_patch.outputs.patch_not_empty == 'true'
       run: |
         PATCH_CONTENT=$(cat clang_format.patch)
-        COMMENT_BODY=$(printf "Here is the clang-format patch:\n\`\`\`diff\n%s\n\`\`\`" "$PATCH_CONTENT")
+        COMMENT_BODY=$(printf '{"body": "Here is the clang-format patch:\n```diff\n%s\n```\n"}' "$PATCH_CONTENT")
         API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
         curl -X POST \
           -H "Accept: application/vnd.github+json" \
