fix(docs): Added links to unaccessible doc pages

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -8,12 +8,14 @@ subtrees:
   - caption: Conceptual
     entries:
     - file: conceptual/programmers-guide
+    - file: conceptual/data-type-support
     - file: conceptual/curand-compatibility
     - file: conceptual/dynamic_ordering_configuration
   - caption: API reference
     entries:
     - file: api-reference/cpp-api
     - file: api-reference/python-api
+    - file: fortran-api-reference
     - file: doxygen/html/index
   - caption: About
     entries:
