--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -64,7 +64,8 @@ jobs:
       if: steps.check_patch.outputs.patch_not_empty == 'true'
       run: |
         PATCH_CONTENT=$(cat clang_format.patch)
-        COMMENT_BODY=$(printf '{"body": "Here is the clang-format patch:\n```diff\n%s\n```\n"}' "$PATCH_CONTENT")
+        ESCAPED_PATCH_CONTENT=$(echo "$PATCH_CONTENT" | python3 -c 'import json, sys; print(json.dumps(sys.stdin.read()))')
+        COMMENT_BODY=$(printf '{"body": "Please run clang-format on the following files:\n```\n%s\n```"}' "$(echo $ESCAPED_PATCH_CONTENT | sed 's/^"//; s/"$//')")
         API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
         curl -X POST \
           -H "Accept: application/vnd.github+json" \
