--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -63,11 +63,10 @@ jobs:
     - name: Post patch as comment
       if: steps.check_patch.outputs.patch_not_empty == 'true'
       run: |
-        COMMENT_BODY="{\"body\": \"clang-format has detected some changes that need formatting."}"
         API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
         curl -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: token ${{ secrets.GH_ACTION_TOKEN_CLANG_FORMAT }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          -d "{\"body\": \"${COMMENT_BODY}\"}" \
+          -d "{\"body\": \"clang-format has detected some changes that need formatting\"}" \
           "${API_URL}"
