--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -2,19 +2,19 @@
 # These comments will also be removed.
 root: index
 subtrees:
-  - entries:
-    - file: what-is-rocrand
-    - file: installing
-    - file: programmers-guide
-    - file: dynamic_ordering_configuration
-    - file: api-reference-home
-      title: API reference
-      subtrees:
-      - entries:
-        - file: cpp-api
-        - file: python-api
-        - file: curand-compatibility
-        - file: doxygen/html/index
+  - caption: Install
+    entries:
+    - file: install/installing
+  - caption: Conceptual
+    entries:
+    - file: conceptual/programmers-guide
+    - file: conceptual/curand-compatibility
+    - file: conceptual/dynamic_ordering_configuration
+  - caption: API reference
+    entries:
+    - file: api-reference/cpp-api
+    - file: api-reference/python-api
+    - file: doxygen/html/index
   - caption: About
     entries:
     - file: license
