--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -29,7 +29,7 @@ jobs:
         if [ "${{ github.repository_owner }}" != "${{ github.event.pull_request.head.repo.owner.login }}" ]; then
           fork_owner="${{ github.event.pull_request.head.repo.owner.login }}"
           fork_url=$(git remote get-url origin)
-          git remote add fork "$fork_url"
+          git remote add fork "${fork_url}"
           git fetch fork ${{ github.head_ref }}
         else
           git fetch origin ${{ github.head_ref }}
