docs/6.1.2: cherry-pick docs reorg (#521)
* organizing docs into subfolders

remove dynamic_ordering_configuration.rst

* update license and index

* removing what-is-rocRAND

* Update LICENSE.txt

Co-authored-by: Nara <naraenda@prasetya.eu>

---------

Co-authored-by: srawat <120587655+SwRaw@users.noreply.github.com>
Co-authored-by: Nara <naraenda@prasetya.eu>

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -2,18 +2,18 @@
 # These comments will also be removed.
 root: index
 subtrees:
-  - entries:
-    - file: what-is-rocrand
-    - file: installing
-    - file: programmers-guide
-    - file: api-reference-home
-      title: API reference
-      subtrees:
-      - entries:
-        - file: cpp-api
-        - file: python-api
-        - file: curand-compatibility
-        - file: doxygen/html/index
+  - caption: Install
+    entries:
+    - file: install/installing
+  - caption: Conceptual
+    entries:
+    - file: conceptual/programmers-guide
+    - file: conceptual/curand-compatibility
+  - caption: API reference
+    entries:
+    - file: api-reference/cpp-api
+    - file: api-reference/python-api
+    - file: doxygen/html/index
   - caption: About
     entries:
     - file: license
