--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -12,6 +12,7 @@ subtrees:
     - file: conceptual/dynamic_ordering_configuration
   - caption: API reference
     entries:
+    - file: api-reference/data-type-support
     - file: api-reference/cpp-api
     - file: api-reference/python-api
     - file: doxygen/html/index
